<?xml version="1.0"?>
<package format="3">
  <name>insta360_ros_driver</name>
  <version>0.0.1</version>
  <description>ROS 2 driver for Insta360 cameras</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
